# fo4test

./: .gitignore  .gitmodules  BuildReleasePostAE.bat  BuildReleasePreNG.bat  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
cmake/: XSEPlugin.cmake
include/: PCH.h
package/F4SE/Plugins/: FrameGeneration.ini
package/F4SE/Plugins/Upscaling/: DilateMotionVectorCS.hlsl  GenerateReactiveMaskCS.hlsl
package/F4SE/Plugins/Upscaling/RCAS/: RCAS.hlsl
package/MCM/Config/Upscaling/: config.json  settings.ini
src/: Buffer.h  DX11Hooks.cpp  DX12SwapChain.cpp  DX12SwapChain.h  FidelityFX.cpp  FidelityFX.h  MotionVectorFixes.cpp  MotionVectorFixes.h  Raytracing.cpp  Raytracing.h  ShaderUtils.cpp  ShaderUtils.h  Streamline.cpp  Streamline.h  Upscaling.cpp  Upscaling.h  Util.cpp  XSEPlugin.cpp
